nova pagina inicial

--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: Icaro e Fernanda Wedding
+title: Chá dos Noivos - Icaro e Fernanda
 email: ic.nanda@icloud.com
 url: icaroefernanda.party
-description: "17/02/2017 será um dos momentos mais felizes das nossas vidas!!"
+description: "17/02/2017 será um dos momentos mais felizes das nossas vidas e queremos fazer um esquenta com vocês no dia 11/02!!"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
