nova pagina inicial

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: Chá dos Noivos - Icaro e Fernanda
+title: Chá dos Noivos - Fernanda e Icaro
 email: ic.nanda@icloud.com
 url: icaroefernanda.party
 description: "17/02/2017 será um dos momentos mais felizes das nossas vidas e queremos fazer um esquenta com vocês no dia 11/02!!"
