nova pagina inicial

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "17/02/2017 será um dos momentos mais felizes das nossas vidas e q
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary-dark: '#000000'
-  links: '#219ab3'
+  links: '#FFFFFF'
 
 # Footer settings
 footer: Icaro e Fernanda Wedding
