nova pagina inicial

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ color:
   links: '#FFFFFF'
 
 # Footer settings
-footer: Icaro e Fernanda Wedding
+footer: Fernanda e Icaro
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 #social:
