--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Chá dos Noivos - Fernanda e Icaro
 email: ic.nanda@icloud.com
 url: icaroefernanda.party
-description: "17/02/2017 será um dos momentos mais felizes das nossas vidas e queremos fazer um esquenta com vocês no dia 11/02!!"
+description: "17/02/2017 será um dos momentos mais felizes das nossas vidas e queremos fazer um esquenta com você, no dia 11/02!!"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
